@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-18T01:00:08Z",
-  "count_outdated" : 834,
-  "uniques_outdated" : 489,
-  "count" : 854,
-  "uniques" : 504,
+  "timestamp" : "2023-09-18T16:17:52Z",
+  "count_outdated" : 837,
+  "uniques_outdated" : 491,
+  "count" : 855,
+  "uniques" : 505,
   "clones" : [
-    {
-      "timestamp": "2023-09-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-09-05T00:00:00Z",
       "count": 3,
@@ -94,6 +85,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-09-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
