@@ -3,11 +3,6 @@
   "uniques": 2,
   "clones": [
     {
-      "timestamp": "2023-09-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-09-05T00:00:00Z",
       "count": 3,
       "uniques": 2
@@ -51,6 +46,11 @@
       "timestamp": "2023-09-17T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-09-18T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
